--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,16 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".MainActivity">
 
     <Button
         android:id="@+id/ex1Button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Ex1"
-        tools:layout_editor_absoluteX="130dp"
-        tools:layout_editor_absoluteY="43dp" />
-</android.support.constraint.ConstraintLayout>
+        android:text="Ex1" />
+
+    <Button
+        android:id="@+id/ex2Button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Ex2" />
+
+    <Button
+        android:id="@+id/ex3Button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Ex3" />
+
+
+</LinearLayout>
