--- a/app/src/main/res/layout/content_navigation.xml
+++ b/app/src/main/res/layout/content_navigation.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -9,6 +9,13 @@
     tools:showIn="@layout/app_bar_navigation">
 
 
+    <!--<ImageButton-->
+        <!--android:id="@+id/startImageButton"-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_gravity="center"-->
+        <!--android:src="@android:drawable/ic_media_play" />-->
+
     <com.google.android.exoplayer2.ui.PlayerView
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/player_view"
@@ -16,4 +23,4 @@
         android:layout_height="match_parent"
         android:keepScreenOn="true"/>
 
-</android.support.constraint.ConstraintLayout>
+</FrameLayout>
